--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "prepublishOnly": "git-branch-is master"
   },
   "jest": {
-    "setupFilesAfterEnv": ["<rootDir>jest.setup.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>jest.setup.js"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
@@ -98,10 +100,10 @@
     "parcel-bundler": "^1.10.1",
     "prettier": "^1.11.1",
     "pretty-quick": "^1.4.1",
-    "react": "16.2.0",
-    "react-dom": "^16.3.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-emotion": "^9.1.1",
-    "react-spring": "^4.0.1",
+    "react-spring": "^8.0.7",
     "recompose": "^0.26.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.60.0",
